# server/app/Http/Controllers/EnsenyançaEventController.php
@@ -13,19 +13,68 @@ use App\Models\Persona;
 
 class EnsenyançaEventController extends BaseController
 {
-    //
+    
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
+        /**
+     * @OA\Get(
+     *   path="/api/ensenyançaevents",
+     *   tags={"Ensenyança Events"},
+     *   summary="Veure tots els ensenymanets dins dels events.",
+     *   @OA\Response(
+     *     response=200,
+     *     description="Retorna totes les ensenyances.",
+     *   ),
+     *   @OA\Response(
+     *     response="default",
+     *     description="S'ha produit un error.",
+     *   )
+     * )
+     */
     function getEnsenyança_events()
     {
         return Ensenyança_event::all();
     }
+
+    /**
+     * @OA\Post(
+     *     path="/api/ensenyançaevent",
+     *     tags={"Ensenyança Events"},
+     *   summary="Inserir una nova ensenyança.",
+    *   @OA\Parameter(
+    *     name="professor_id",
+    *     description="Id del professor",
+    *     required=true,
+    *     in="query",
+    *     @OA\Schema(
+    *       type="integer"
+    *     )
+    *   ),
+    *   @OA\Parameter(
+    *     name="event_id",
+    *     description="Id del event",
+    *     required=true,
+    *     in="query",
+    *     @OA\Schema(
+    *       type="integer"
+    *     )
+    *   ),
+    *   @OA\Response(
+    *     response=200,
+    *     description="Retorna l'ensenyament que hem inserit.",
+    *   ),
+    *   @OA\Response(
+    *     response="default",
+    *     description="S'ha produit un error.",
+    *   )
+    * )
+    */
     function ensenyança_event(Request $request)
     {
-        $persona = Persona::find($request->persona_id);
+        $persona = Persona::find($request->professor_id);
         $event = Event::find($request->event_id);
         $ensenyançaEv = new Ensenyança_event();
      
-        $ensenyançaEv->persona()->associate($persona);
+        $ensenyançaEv->professor()->associate($persona);
         $ensenyançaEv->event()->associate($event);
         $ensenyançaEv->save();
         
